<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hint">Enter search query</string>
    <string name="search">Search</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="label_begin_date">Begin Date</string>
    <string name="label_sort_order">Sort Order</string>
    <string name="label_news_desk_value">News Desk Values</string>
    <string name="button_save">save</string>
    <string name="button_pick_date">Pick a date</string>
    <string name="news_desk_value_arts">Arts</string>
    <string name="news_desk_value_fashion_and_style">Fashion &amp; Style</string>
    <string name="news_desk_value_sports">Sports</string>
    <string name="button_reset">Reset</string>
    <string-array name="article_search_filter_sort_order_array">
        <item>Relevance</item>
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>
</resources>
